# ViZoo

./: .gitignore  Cargo.toml  LICENSE.md  README.md
backend/: .gitignore  Cargo.toml
backend/src/: handlers.rs  lib.rs  main.rs  routes.rs
frontend/: package-lock.json  package.json
frontend/src/: AnimalCard.tsx  AnimalResult.tsx  AnimalSearch.tsx  App.css  App.tsx  HttpService.tsx  Logo.tsx
src/: handlers.rs  lib.rs  main.rs  routes.rs
tests/: quick_dev.rs
