[package]
name = "vi_zoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
tracing = "0.1.40"
anyhow = "1"
csv = "1.3.0"
rand = "0.8.5"
select = "0.6.0"

[dev-dependencies]
httpc-test = "0.1.1"
